--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "license": "MIT",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
-    "jest": "^24.1.0"
+    "jest": "^24.1.0",
+    "mustache": "^4.0.1"
+  },
+  "devDependencies": {
+    "runjs": "^4.4.2"
   }
 }
