--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "license": "MIT",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^24.1.0",
     "mustache": "^4.0.1",
+    "superagent": "^5.2.2",
     "supertest": "^4.0.2"
   },
   "devDependencies": {
