--- a/javascript/challenges/package.json
+++ b/javascript/challenges/package.json
@@ -1,7 +1,6 @@
 {
   "name": "javascript",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "directories": {
     "test": "tests"
@@ -17,5 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "jest": "^26.3.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
